[tool.poetry]
name = "stock-monitor-api"
version = "0.1.0"
description = "A minimal Python development environment with Dev Containers and Poetry."
authors = ["HolyVolcano"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"